# cosmos-raiders

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
game/: Cargo.toml  build.rs
game/src/: main.rs
game/src/game/: aliens.rs  collisions.rs  explosions.rs  gameover.rs  mod.rs  scoreboard.rs  shields.rs  ships.rs
game/src/ui/: menu.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
