[package]
name = "cosmos-raiders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.1"
bevy-tokio-tasks = "0.11.0"
bevy-ui-dsl = { version = "0.6.1", features = ["class_helpers"] }
bevy_framepace = "0.13.3"
bevy_screen_diagnostics = { version = "0.3.0", default-features = false }
hardlight = "2.0.0"
tracing = "0.1.40"
