[package]
name = "cosmos-raiders"
version = "0.1.0"
edition = "2021"
default-run = "cosmos-raiders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3" }
bevy-inspector-egui = { version = "0.20", features = ["highlight_changes"] }
bevy-tokio-tasks = "0.11.0"
bevy-ui-dsl = { version = "0.6.1", features = ["class_helpers"] }
bevy_framepace = "0.13.3"
bevy_screen_diagnostics = { version = "0.3.0", default-features = false, optional = true }
bevy_spatial = { version = "0.6.0", git = "https://github.com/617a7a/bevy-spatial" }
tracing = "0.1.40"

[features]
fps_counter = ["bevy_screen_diagnostics"]

[build-dependencies]
lodepng = "3.9.2"
