[package]
name = "cosmos-raiders-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["rkyv"] }
hardlight = { version = "2.0.0", features = ["unpure-compression"] }
rand = "0.8.5"
sled = "0.34.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
